[gd_scene load_steps=21 format=3 uid="uid://dbej5n10qoe1u"]

[ext_resource type="Script" path="res://scripts/enemies/melee_enemy.gd" id="1_4ahg2"]
[ext_resource type="Texture2D" uid="uid://d3s2c8dnvonq2" path="res://assets/16x16 Pixel Cave/Separated/BatNoShadow.png" id="2_7ri87"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4wrnj"]
atlas = ExtResource("2_7ri87")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwjn3"]
atlas = ExtResource("2_7ri87")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mane4"]
atlas = ExtResource("2_7ri87")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdahs"]
atlas = ExtResource("2_7ri87")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_55rcs"]
atlas = ExtResource("2_7ri87")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r4ae"]
atlas = ExtResource("2_7ri87")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v68h4"]
atlas = ExtResource("2_7ri87")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mayn"]
atlas = ExtResource("2_7ri87")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk6ql"]
atlas = ExtResource("2_7ri87")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhiva"]
atlas = ExtResource("2_7ri87")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2klh"]
atlas = ExtResource("2_7ri87")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yv2p"]
atlas = ExtResource("2_7ri87")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hqh4"]
atlas = ExtResource("2_7ri87")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_32ilg"]
atlas = ExtResource("2_7ri87")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo76d"]
atlas = ExtResource("2_7ri87")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_btwo8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wrnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwjn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mane4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdahs")
}],
"loop": true,
"name": &"attacking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_55rcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r4ae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v68h4")
}],
"loop": true,
"name": &"damaged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mayn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk6ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhiva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2klh")
}],
"loop": false,
"name": &"dying",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yv2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hqh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32ilg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo76d")
}],
"loop": true,
"name": &"moving",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6lmwg"]
radius = 6.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p12sv"]
radius = 22.0227

[node name="Enemy_One" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_4ahg2")
SPEED = 100.0
damage = 50

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(13.5, 13.5)
scale = Vector2(2.6875, 2.6875)
sprite_frames = SubResource("SpriteFrames_btwo8")
animation = &"moving"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(13, 13)
shape = SubResource("CapsuleShape2D_6lmwg")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(13, 13)
shape = SubResource("CircleShape2D_p12sv")

[node name="Hit_Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="Hit_Timer" to="." method="_on_hit_timer_timeout"]
